# siapp

./: .gitignore  404.html  README.md  buildozer.spec  index.html  main.kv  main.py  memory_app.db  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
deployment/: index.html
docs/: deployment.md  hours_logging.md  index.md  installation.md  pao.md
hours_logging/: index.html
installation/: index.html
notebook/: prova.py  prove.ipynb
pao/: index.html
search/: search_index.json
siapp/: main.kv  main.py
siapp/db/: database.py  models.py
siapp/db_old/: database.py
siapp/screens/: exercise.kv  exercise.py  hourslog.kv  hourslog.py  insertion.kv  insertion.py  main_menu.kv  main_menu.py  main_page.kv  main_page.py
siapp/utils/: __init__.py  images.py  retention_index.py
