[tool.poetry]
name = "siapp"
version = "0.1.0"
description = ""
authors = ["Elia1996 <ribaldoneelia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.22"
kivy = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
