[tool.poetry]
name = "siapp"
version = "0.1.0"
description = ""
authors = ["Elia1996 <ribaldoneelia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kivy = "^2.3.0"
kivymd = "^1.2.0"
pyjnius = "^1.6.1"
plyer = "^2.1.0"
licenseheaders = "^0.8.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
mkdocs = "^1.6.1"
mkdocs-material = {extras = ["python"], version = "^9.5.47"}
mdx-include = "^1.4.2"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocstrings = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
